# image_processing

./: .gitignore  README.md
HE/: CMakeLists.txt  README.md
SUSAN/: CMakeLists.txt
SUSAN/src/: susan_demo.cpp
anisotropic_diffusion/: CMakeLists.txt
anisotropic_diffusion/src/: anisotropic_diffusion_demo.cpp
canny/src/: canny.cpp  canny_demo.cpp
colorization/colorization_using_optimization/: CMakeLists.txt  cmake_install.cmake
dehaze/fast_cap/: cap_dehazing.py  prior.py
dehaze/single_dehaze_he/: CMakeLists.txt
detection/canny/: CMakeLists.txt
detection/harris/: CMakeLists.txt
detection/laplace_pyramid/: CMakeLists.txt
editing/possion_image_editing/: CMakeLists.txt
exposure_fusion/: CMakeLists.txt
exposure_fusion/src/: exposure_fusion.cpp  exposure_fusion.py  failed.cpp
filter/mean_filter/: 均值滤波这个要做
gaussi_filter/: CMakeLists.txt  README.md
gaussi_filter/src/: faster_gaussi_filter.cpp  gaussi_demo.cpp  gaussi_filter.cpp
guided_filter/: CMakeLists.txt  README.md
guided_filter/include/: guided_filter.h
guided_filter/src/: guided_demo.cpp  guided_filter.cpp  guided_filter_padded.cpp
harris/: CMakeLists.txt
harris/src/: harris_demo.cpp
hdr/bilateral_hdr/: CMakeLists.txt
hdr/homomorphic_filtering/: CMakeLists.txt
interpolation/bicubic/: CMakeLists.txt
interpolation/joint_bilateral_upsampling/: crane_upsample.cpp  run.py  run_sparse.py
laplace/: CMakeLists.txt
laplace/include/: laplace_of_gaussi.h
laplace/src/: laplace_demo.cpp  laplace_of_gaussi.cpp
laplace_pyramid/: CMakeLists.txt
laplace_pyramid/src/: laplace_pyramid.cpp
matting/possion_matting/: CMakeLists.txt
matting/possion_matting/src/: others.cpp  possion_matting.cpp  possion_matting.py
non_local_means/: run.m
possion_image_editing/: CMakeLists.txt
scripts/: taming-transformers.ipynb
sift/: CMakeLists.txt
single_dehaze_he/: CMakeLists.txt
(+112 files in other folders)
